--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,26 @@
-/* 
-    Created on : Mar 12, 2014, 1:04:38 PM
-    Author     : Joel
-*/
+ul#menu
+{
+    padding: 0px;
+    position: relative;
+    margin: 0;
+}
 
+ul#menu li
+{
+    display: inline;
+}
+
+ul#menu li a 
+{
+    background-color: #ffffff;
+    padding: 10px 20px;
+    text-decoration: none;
+    line-height: 2.8em;
+    color: #034af3;
+    border-radius: 4px 4px 0 0;
+}
+
+ul#menu li a:hover
+{
+    background-color: #e8eef4;
+}
